--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+## Apple
+
 # General
 .DS_Store
 .AppleDouble
@@ -24,3 +26,18 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+## vscode
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
