--- a/tr/manifest.json
+++ b/tr/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Türkçede Armus",
     "short_name": "Armus TR",
-    "start_url": "./?launch=pwa",
+    "start_url": "./",
     "description": "Tüm özel amogusları bir orduya organize etmek için bir proje!",
     "lang": "tr-TR",
     "background_color": "#f52626",
@@ -9,6 +9,11 @@
     "scope": ".",
     "display": "standalone",
     "icons": [
+        {
+            "src": "at-icon.png",
+            "sizes": "114x114",
+            "type": "image/png"
+        },
         {
             "src": "pwa-icon.png",
             "sizes": "152x152",
