--- a/.github/ISSUE_TEMPLATE/5-CharacterIdea.yml
+++ b/.github/ISSUE_TEMPLATE/5-CharacterIdea.yml
@@ -10,7 +10,7 @@ body:
         # 💡 Character idea
   - type: input
     attributes:
-      label: "1st character name:"
+      label: "Character name:"
       description: "Write the name of the 1st character you found"
       placeholder: "ex. abigus"
     validations:
